fix ribbon height and z-index

--- a/app/styles/components/create-param-group.scss
+++ b/app/styles/components/create-param-group.scss
@@ -6,7 +6,7 @@
 
 	&-ribbon {
 		background-color:$yellow;
-		padding:10px;
+		padding:8px 19px;
 		text-transform: uppercase;
 	}
 
